plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

def loadOptionalEnvFile = { File envFile ->
	def values = [:]
	if (!envFile.exists() || !envFile.isFile()) {
		return values
	}

	envFile.eachLine('UTF-8') { line ->
		def trimmed = line.trim()
		if (!trimmed || trimmed.startsWith('#') || !trimmed.contains('=')) {
			return
		}

		int separatorIndex = trimmed.indexOf('=')
		def rawKey = trimmed.substring(0, separatorIndex).trim()
		def key = rawKey.startsWith('export ') ? rawKey.substring('export '.length()).trim() : rawKey
		def value = trimmed.substring(separatorIndex + 1).trim()

		if ((value.startsWith('"') && value.endsWith('"')) || (value.startsWith("'") && value.endsWith("'"))) {
			value = value.substring(1, value.length() - 1)
		}

		if (key) {
			values[key] = value
		}
	}

	return values
}

def dotEnvValues = [:]
dotEnvValues.putAll(loadOptionalEnvFile(file('../../.env')))
dotEnvValues.putAll(loadOptionalEnvFile(file('.env')))

def schemaValidationEnvKeys = [
	'DB_URL',
	'DB_USERNAME',
	'DB_PASSWORD',
	'BASEBALL_DB_URL',
	'BASEBALL_DB_USERNAME',
	'BASEBALL_DB_PASSWORD',
]

def flywayResourceDirMappings = [
	[
		source: file('src/main/resources/db/migration'),
		build : file("$buildDir/resources/main/db/migration"),
		label : 'primary'
	],
	[
		source: file('src/main/resources/db/migration_postgresql'),
		build : file("$buildDir/resources/main/db/migration_postgresql"),
		label : 'postgres'
	],
]

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	    implementation 'org.springframework.boot:spring-boot-starter-security'
	    implementation 'org.springframework.boot:spring-boot-starter-actuator'
	    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Argon2id password hashing (required by Spring Security's Argon2PasswordEncoder)
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
    
    // Standard Lombok (managed by Spring Boot)
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testCompileOnly 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'

    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    implementation 'com.oracle.database.nls:orai18n:21.9.0.0'
    // OCI Wallet Support
    implementation 'com.oracle.database.security:oraclepki:21.9.0.0'
    implementation 'com.oracle.database.security:osdt_cert:21.9.0.0'
    implementation 'com.oracle.database.security:osdt_core:21.9.0.0'

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    
    // AWS S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
    
    // Image resizing
    implementation 'net.coobird:thumbnailator:0.4.20'
    implementation 'com.github.jai-imageio:jai-imageio-core:1.4.0'
    // WebP support
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.10.1'
    implementation 'com.twelvemonkeys.imageio:imageio-core:3.10.1'
    implementation 'com.github.gotson:webp-imageio:0.2.2'

    // Netty macOS DNS fix
    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.118.Final:osx-aarch_64'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    
    // WebFlux (WebClient)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'

    // Caffeine Cache
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // JobRunr (Spring Boot 3)
    implementation 'org.jobrunr:jobrunr-spring-boot-3-starter:7.2.0'
    
    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.flywaydb:flyway-database-oracle'

    // Swagger / OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}



springBoot {
    mainClass = 'com.example.BegaProjectApplication'
}

tasks.named('bootRun') {
	classpath = sourceSets.main.runtimeClasspath.filter { !it.name.contains('spring-boot-devtools') }
	// Ensure local bootRun starts with dev profile by default.
	systemProperty 'spring.profiles.active', 'dev'
	jvmArgs '-Xmx4096m', '-Dfile.encoding=UTF-8'
	systemProperty 'file.encoding', 'UTF-8'
}

tasks.register('mateTest', Test) {
	group = 'verification'
	description = 'Runs only mate-domain tests from src/test/java/com/example/mate/**'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    filter {
        includeTestsMatching "com.example.mate.*"
    }
}

tasks.register('schemaValidationTest', Test) {
	group = 'verification'
	description = 'Runs only schema validation context test(s) from src/test/java/com/example/schema/**'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    schemaValidationEnvKeys.each { key ->
        def resolvedValue = System.getenv(key) ?: dotEnvValues[key]
        if (resolvedValue?.trim()) {
            environment key, resolvedValue
        }
    }
    doFirst {
        def missingKeys = ['DB_URL', 'DB_USERNAME', 'DB_PASSWORD'].findAll { key ->
            def resolvedValue = System.getenv(key) ?: dotEnvValues[key]
            !resolvedValue?.trim()
        }

        if (!missingKeys.isEmpty()) {
            throw new GradleException("schemaValidationTest requires ${missingKeys.join(', ')} via environment or .env")
        }
    }
    filter {
        includeTestsMatching "com.example.schema.*"
    }
}

tasks.register('flywaySafetyTest', Test) {
	group = 'verification'
	description = 'Runs Flyway safety regression tests for migration version uniqueness and repair policy'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    filter {
        includeTestsMatching "com.example.common.config.FlywayConfigTest"
        includeTestsMatching "com.example.common.config.FlywayMigrationVersionUniquenessTest"
    }
}

tasks.register('migrationSafetyCheck') {
	group = 'verification'
	description = 'Runs Flyway regression tests and verifies build/resources has no stale migration SQL files'
	dependsOn tasks.named('flywaySafetyTest')
	dependsOn tasks.named('verifyFlywayResourceSync')
}

tasks.register('dbSafetyTest') {
	group = 'verification'
	description = 'Runs Flyway safety regression tests and schema validation context checks'
	dependsOn tasks.named('migrationSafetyCheck')
	dependsOn tasks.named('schemaValidationTest')
}

tasks.register('verifyFlywayResourceSync') {
	group = 'verification'
	description = 'Verifies build/resources contains no stale Flyway SQL files after processResources'
	dependsOn tasks.named('processResources')
	doLast {
		flywayResourceDirMappings.each { mapping ->
			def sourceFiles = mapping.source.exists()
				? fileTree(mapping.source) { include '**/*.sql' }.files.collect { it.name }.toSet()
				: [] as Set
			def buildFiles = mapping.build.exists()
				? fileTree(mapping.build) { include '**/*.sql' }.files.collect { it.name }.toSet()
				: [] as Set

			def staleFiles = buildFiles - sourceFiles
			def missingFiles = sourceFiles - buildFiles

			if (!staleFiles.isEmpty() || !missingFiles.isEmpty()) {
				throw new GradleException(
					"Flyway resource sync mismatch for ${mapping.label}: stale=${staleFiles}, missing=${missingFiles}"
				)
			}
		}
	}
}

tasks.named('check') {
	dependsOn tasks.named('migrationSafetyCheck')
}

tasks.named('processResources') {
	doFirst {
		delete(destinationDir)
	}
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()

	// Stabilize local/CI runs for heavy integration suites.
	maxParallelForks = 1
	failFast = false
	maxHeapSize = '2048m'
	jvmArgs '-Dfile.encoding=UTF-8'
	systemProperty 'file.encoding', 'UTF-8'

	reports {
		junitXml.required = true
		junitXml.outputPerTestCase = true
		junitXml.mergeReruns = true
		junitXml.includeSystemOutLog = false
		junitXml.includeSystemErrLog = false
	}

	testLogging {
		events "failed", "skipped"
		exceptionFormat "short"
		showStandardStreams = false
	}
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["-parameters"]
}
